feat: add an alternative to using snapshot versioning (#67)
mavenAlpha() can be used to provide an auto incrementing version between
releases that can be locked and is both a valid semantic version and
maven version.